[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/KitchenSelection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/LevelSelection.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/KitchenUpgrades.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KitchenSelection" parent="." instance=ExtResource( 1 )]

[node name="LevelSelection" parent="." instance=ExtResource( 2 )]
visible = false

[node name="KitchenUpgrades" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="kitchen_selected" from="KitchenSelection" to="." method="_on_KitchenSelection_kitchen_selected"]
[connection signal="close_request" from="LevelSelection" to="." method="_on_LevelSelection_close_request"]
[connection signal="game_request" from="LevelSelection" to="." method="_on_LevelSelection_game_request"]
[connection signal="open_request" from="LevelSelection" to="." method="_on_LevelSelection_open_request"]
[connection signal="close_request" from="KitchenUpgrades" to="." method="_on_KitchenUpgrades_close_request"]
